# scholar-agent

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-title.yml
